# polyglot-bot

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build-multiarch.yml
src/: config.rs  main.rs  text.rs
src/synth/: language.rs  mod.rs  synth.rs
